k8s_manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  
  name: springboot-hello

  labels:
    app: springboot-hello
    app.openshift.io/runtime: spring-boot

spec:

  replicas: 1

  selector:
    matchLabels:
        app: springboot-hello

  template:
    metadata:
      labels: 
        app: springboot-hello

    spec:

      containers:
        - name: hello-springboot

          image: 'quay.io/mukeshs1306/springboot-hello:latest'

          ports:
            - name: http
              containerPort: 9001
              protocol: TCP
